--- a/sensappdroid-main/res/layout/upload_composite.xml
+++ b/sensappdroid-main/res/layout/upload_composite.xml
@@ -34,24 +34,29 @@
                 android:textSize="20dp" >
         </TextView>
 
-        <CheckBox
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="HTTP"
-                android:id="@+id/http" android:checked="false"
-                android:layout_marginLeft="6dp"/>
-        <CheckBox
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="WS"
-                android:id="@+id/ws" android:checked="false"
-                android:layout_marginLeft="6dp"/>
-        <CheckBox
-            android:layout_width="wrap_content"
+        <RadioGroup
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="None"
-            android:id="@+id/none" android:checked="false"
-            android:layout_marginLeft="6dp"
-            android:layout_marginRight="12dp"/>
+            android:orientation="horizontal">
+            <RadioButton
+                    android:id="@+id/http"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="HTTP" android:checked="false"
+                    android:layout_marginLeft="6dp"/>
+            <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="WS"
+                    android:id="@+id/ws" android:checked="false"
+                    android:layout_marginLeft="6dp"/>
+            <RadioButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="None"
+                android:id="@+id/none" android:checked="false"
+                android:layout_marginLeft="6dp"
+                android:layout_marginRight="12dp"/>
+        </RadioGroup>
     </TableRow>
 </TableLayout>
